[package]
name = "diffcount"
version = "0.1.0"
authors = ["Tim Thompson <tim@wokket.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#console_error_panic_hook = "0.1.6"

serde = "1.0"
serde_derive = "1.0"
stdweb = "0.4.20"
#wee_alloc = "0.4.5"
yew = "0.9.2"